trilium/01_statefulSet_trilium.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trilium-notes
  namespace: trilium
  labels:
    app: trilium-notes
spec:
  serviceName: trilium-notes
  replicas: 1
  selector:
    matchLabels:
      app: trilium-notes
  template:
    metadata:
      labels:
        app: trilium-notes
    spec:
      containers:
        - name: trilium-notes
          image: "zadam/trilium:0.58.7"
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8082
          readinessProbe:
            httpGet:
              path: /
              port: 8082
          volumeMounts:
            - name: data-volume
              mountPath: "/srv/trilium-data"
      volumes:
        - name: data-volume
          hostPath:
            path: /opt/trilium/data
