trilium/03_service_trilium.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-notes
  namespace: trilium
  labels:
    app: trilium-notes
spec:
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  type: NodePort
  selector:
    app: trilium-notes
